models/tests/errors/semantic/typeoverride.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

module main {
    type main;
}